tests/baselines/reference/primitiveTypeAssignment.errors.txt
tests/cases/compiler/primitiveTypeAssignment.ts(1,9): error TS2304: Cannot find name 'any'.
tests/cases/compiler/primitiveTypeAssignment.ts(3,9): error TS2304: Cannot find name 'number'.
tests/cases/compiler/primitiveTypeAssignment.ts(5,9): error TS2304: Cannot find name 'boolean'.


==== tests/cases/compiler/primitiveTypeAssignment.ts (3 errors) ====
    var x = any;
            ~~~
!!! error TS2304: Cannot find name 'any'.
    
    var y = number;
            ~~~~~~
!!! error TS2304: Cannot find name 'number'.
    
    var z = boolean;
            ~~~~~~~
!!! error TS2304: Cannot find name 'boolean'.
    